--- a/App.css
+++ b/App.css
@@ -1,3 +1,29 @@
+.weather {
+    float: right;
+}
+
+.user {
+    width: auto;
+    margin: 0 auto;
+    margin: 1rem;
+    text-align: left;
+    float: left;
+    border: 1px solid #d2d2d2;
+}
+
+.user h1 {
+    background-color: #337ab7;
+    color: white;
+    margin: 0;
+    padding: 10px;
+}
+
+.user h4 {
+    color: #333;
+    margin: 0;
+    padding: 10px;
+}
+
 .container {
     width: fit-content;
     margin: 0 auto;
