--- a/App.css
+++ b/App.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+* {
+    font-family: Lato;
+}
+
 .weather {
     float: right;
 }
 
 .user {
-    width: auto;
     margin: 0 auto;
     margin: 1rem;
     text-align: left;
@@ -29,6 +34,9 @@
     margin: 0 auto;
     padding: 5rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
   
   .submit {
@@ -57,3 +65,7 @@
       font-family: "Barlow", sans-serif;
       width: 96%;
   }
+
+footer {
+    margin: 10px;
+}
