--- a/App.css
+++ b/App.css
@@ -4,10 +4,6 @@
     font-family: Lato;
 }
 
-.weather {
-    float: right;
-}
-
 .user {
     margin: 0 auto;
     margin: 1rem;
@@ -32,40 +28,49 @@
 .container {
     width: fit-content;
     margin: 0 auto;
-    padding: 5rem;
+    padding: 3rem;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
   
-  .submit {
-      background: #fc4756;
-      border-color: #ffffff;
-      border-radius: 20px;
-      color: #ffffff;
-      padding: 13px 27px;
-      font-size: 18px;
-      letter-spacing: 0px;
-  }
-  
-  .input-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .mb2 {
-    margin: 1rem;
-    background: #efefef;
-      border-radius: 20px;
-      height: 36px;
-      border: 0;
-      padding: 0 10px 0 24px!important;
-      font-size: 16px;
-      font-family: "Barlow", sans-serif;
-      width: 96%;
-  }
+.submit {
+    background: #fc4756;
+    border-color: #ffffff;
+    border-radius: 20px;
+    color: #ffffff;
+    padding: 13px 27px;
+    font-size: 18px;
+    letter-spacing: 0px;
+}
+
+.input-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mb2 {
+  margin: 1rem;
+  background: #efefef;
+  border-radius: 20px;
+  height: 36px;
+  border: 0;
+  padding: 0 10px 0 24px!important;
+  font-size: 16px;
+  font-family: "Barlow", sans-serif;
+  width: 96%;
+}
 
 footer {
     margin: 10px;
+}
+
+.delivery {
+    width: 50%
+}
+
+.temp {
+    font-size: 2rem;
 }
